# SLAE

./: CMakeLists.txt  README.md
hm1/: 3d-matrix.cpp  CMakeLists.txt
include/: QR_system_decision.hpp  algorithm_of_Householder.hpp  csr_matrix.hpp  dense_matrix.hpp  input_matrix_and_vector.hpp  vector_operations.hpp
include/QR_decomposition/: algorithm_of_Householder.hpp
include/matrix/: Matrix.hpp  csr_matrix.hpp  dense_matrix.hpp
include/suport/: elliptical_equation.hpp  input_matrix_and_vector.hpp  lambda_estimation.hpp  vector_operations.hpp
include/system_decision/iteration/: Gauss_Seidel_iteration_method.hpp  Jacobi_iteration_method.hpp  method_of_simple_iterations.hpp
include/system_solution/direct/: QR_system_solution.hpp
include/system_solution/iteration/: BiCG.hpp  CG.hpp.save-failed  CGS.hpp  Chebyshev_acceleration.hpp  Gauss_Seidel_iteration_method.hpp  Jacobi_iteration_method.hpp  method_of_simple_iterations.hpp  steepest_gradient_descent_method.hpp  successive_over_relaxation_method.hpp  symmetry_Gauss_Seidel_iteration_method.hpp  symmetry_acceleration.hpp
src/: 3_diagonal_matrix_solution.cpp  csr_matrix.hpp  dense_matrix.hpp  iter_method_versus.cpp  vector_operations.hpp
test/: QR_decision_test.cpp  QR_decomposition_test.cpp  csr_vs_dense_matrix.cpp  iter_method_versus.cpp  symmetry_versus.cpp
